Fixed skills alignment, styled project link button

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -23,7 +23,9 @@ header h1 {
 	width: 100%;
 }
 
-
+.hidden {
+	visibility: hidden;
+}
 
 .section-content {
 	max-width: 1800px;
