--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -1,5 +1,4 @@
 #projects {
-  padding-bottom: 5%;
 }
 
 .project-header{
@@ -13,6 +12,15 @@
   font-size: 3rem;
 }
 
+.project-link-button {
+  margin-top: 2rem;
+  font-size: 2rem;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
 .project-date {
   font-size: 3rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -21,6 +29,13 @@
 
 .small-icons {
   font-size: 2rem;
+}
+
+.arrow {
+  display: inline-block;
+  margin-bottom: 1rem;
+  padding: 3px;
+  transform: rotate(-90deg);
 }
 
 
