--- a/src/scss/themes/light-slider.scss
+++ b/src/scss/themes/light-slider.scss
@@ -33,7 +33,6 @@ $content-background-color: #D7CAAA;
 }
 
 %clear-focus {
-  outline-color: 0;
   outline-style: none;
   outline-width: 0;
 }
